test_d3d9_opts = common_exe_opts + { 'dependencies': [ util_dep, lib_d3d9, lib_d3dcompiler_47 ] }

executable('d3d9-clear'+exe_ext,  files('test_d3d9_clear.cpp'), kwargs: test_d3d9_opts)
executable('d3d9-buffer'+exe_ext,  files('test_d3d9_buffer.cpp'), kwargs: test_d3d9_opts)
executable('d3d9-triangle'+exe_ext,  files('test_d3d9_triangle.cpp'), kwargs: test_d3d9_opts)
executable('d3d9-l6v5u5'+exe_ext,  files('test_d3d9_l6v5u5.cpp'), kwargs: test_d3d9_opts)
executable('d3d9-nv12'+exe_ext,  files('test_d3d9_nv12.cpp'), kwargs: test_d3d9_opts)
