test_d3d9_deps = [ util_dep, lib_d3d9, lib_d3dcompiler_47 ]

executable('d3d9-clear'+exe_ext,  files('test_d3d9_clear.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
executable('d3d9-buffer'+exe_ext,  files('test_d3d9_buffer.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
executable('d3d9-triangle'+exe_ext,  files('test_d3d9_triangle.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
executable('d3d9-l6v5u5'+exe_ext,  files('test_d3d9_l6v5u5.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
executable('d3d9-nv12'+exe_ext,  files('test_d3d9_nv12.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
executable('d3d9-bc-update-surface'+exe_ext,  files('test_d3d9_bc_update_surface.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
executable('d3d9-up'+exe_ext,  files('test_d3d9_up.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
